Fix spacing

--- a/src/PortfolioPlanning/Components/PlanSummary.scss
+++ b/src/PortfolioPlanning/Components/PlanSummary.scss
@@ -5,7 +5,7 @@
     display: flex;
 
     .summary-item {
-        margin: $spacing-4;
+        padding-right: $spacing-32;
     }
 
     .projects-teams-label {
